--- a/main.html
+++ b/main.html
@@ -45,9 +45,8 @@
             <h2>My Melody</h2>
         </div>
         <div class="character">
-            <h2>Keroppi</h2>
+            <h2>Neymar</h2>
         </div>
-        <!-- Añade más personajes aquí -->
     </div>
 </body>
 </html>
