--- a/main.html
+++ b/main.html
@@ -45,7 +45,7 @@
             <h2>My Melody</h2>
         </div>
         <div class="character">
-            <h2>Neymar</h2>
+            <h2>Kuromi</h2>
         </div>
     </div>
 </body>
